Fix SpringDoc compatibility and successfully connect to Supabase PostgreSQL